[package]
name = "serum-dex-permissioned"
version = "0.1.0"
edition = "2018"

[dependencies]
anchor-lang =  { path = "../../../anchor_prev/lang" }
anchor-spl = { path = "../../../anchor_prev/spl" ,features=["dex"] }

  [dependencies.serum_dex]
  path = "../"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
version = "3.2.0"
