[package]
name = "serum-dex-permissioned"
version = "0.1.0"
edition = "2018"

[dependencies]
anchor-lang =  { path = "../../../bh-anchor18/lang" }
anchor-spl = { path = "../../../bh-anchor18/spl" ,features=["dex"] }

  [dependencies.serum_dex]
  path = "../"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
version = "3.2.2"
